[package]
name = "rdkit-rust"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "rdkit_rust"
path = "src/lib.rs"

[dependencies]
crossbeam = "0.8.2"
const-hex = "1.9"
itertools = "0.12.0"
num_cpus = "1.16"
num_enum = "0.7.1"
rayon = "1.8"
serde_json = "1.0"
rdkit-rust-sys = { path = "../rdkit-rust-sys" }

[profile.release]
debug = true
lto = true
